clusters/apps/arr/overseer/overseer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: arr-stack
  labels:
    io.kompose.service: overseer
  name: overseer
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: overseer
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: overseer
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: lscr.io/linuxserver/overseer:latest
          name: overseer
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /config/overseer
              name: arr-claim0
            - mountPath: /data/downloads
              name: arr-claim0
      restartPolicy: Always
      volumes:
        - name: arr-claim0
          persistentVolumeClaim:
            claimName: arr-claim0
