clusters/apps/arr/overseer/overseer-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: arr-stack
  labels:
    io.kompose.service: overseer
  name: overseer
spec:
  ports:
    - name: "5055"
      port: 5055
      targetPort: 5055
  selector:
    io.kompose.service: overseer
